--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ btleplug = {version = "0.11.5", features = ["serde_cr"]}
 futures = "0.3.30"
 tokio = {version = "1.36.0", features = ["full"]}
 uuid = "1.8.0"
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.52.0", features = ["Devices_Bluetooth", "Devices_Bluetooth_GenericAttributeProfile", "Devices_Bluetooth_Advertisement", "Devices_Radios", "Foundation_Collections", "Foundation", "Storage_Streams"] }
 
